--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,22 @@
  *= require_tree .
  *= require_self
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+@import "card.scss";
+@import "banner.scss";
+@import "navbar.scss";
+@import "footer.scss";
+
+body{
+  font-family: "Kavivanar";
+}
+
+.text-center{
+  text-align: center;
+}
