--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Cocktails#show</h1>
-<p>Find me in app/views/cocktails/show.html.erb</p>
+<h1><%= @cocktail.name %></h1>
+
+<p><%= @cocktail.instruction %></p>
+
+<ul>
+<% @cocktail.doses.each do |dose| %>
+<li>
+<%= dose.ingredient.name %>
+<% if dose.description != "\n" %>
+-
+<% end %>
+<em><%= dose.description %></em>
+
+</li>
+<% end %>
+</ul>
+
+
+<%= link_to("Add dose", new_cocktail_dose_path(@cocktail), class: "btn btn-yours") %>
+<%= link_to("Return", cocktails_path, class: "btn btn-yours") %>
+
+<%= image_tag(@cocktail.image)  %>
