new cocktail page styling

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -50,10 +50,9 @@
 }
 
 .btn-yours{
-  background-color: white;
-  border-radius: 8px;
+  padding: 4px 8px;
+  border-radius: 16px;
   border: 1px solid lightgrey;
-  background: linear-gradient(180deg, #FFFFFF 20%, #CCCCCC 80%)
 }
 
 .wrapper-cards{
