--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,8 +27,14 @@
 
 body{
   font-family: "Kavivanar";
+
+    height:  100%;
+    margin:  0px auto;
+    padding: 0px auto;
+
 }
 
 .text-center{
   text-align: center;
 }
+
