--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -57,7 +57,13 @@
 
 .wrapper-cards{
   background: linear-gradient(90deg,#800000 3%, #000000 10%,  #000000 90%, #800000 97%);
+  // height: auto;
+  // min-height: 100%;
+  //   margin:     0px auto;
+  //   padding:    0px auto;
 }
+
+
 
 .btn-yours{
   text-decoration: none;
