--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div class="wrapper-cards">
+<div class="wrapper-cocktails">
   <div class="container">
 
     <div class="cocktail-info">
